--- a/force-app/main/default/lwc/solarDatePickerCustom/solarDatePickerCustom.html
+++ b/force-app/main/default/lwc/solarDatePickerCustom/solarDatePickerCustom.html
@@ -1,11 +1,43 @@
 <template>
-
-    <lightning-combobox
-            name="Selecione a data"
-            label="Selecione a data"
-            placeholder="Selecione a data"
-            value={value}
-            options={validDates}></lightning-combobox>
-
-    <input type="date" name="input1" id="myDatePicker" onclick={removeDates} />
+    <div class="dates">
+        <div class="buttonContainer">
+            <button class="link" type="button" onclick={goToday}>
+                Today
+            </button>
+            <p>{formattedSelectedDate}</p>
+            <p class="bold">{year}</p>
+        </div>
+        <div class="buttonContainer">
+            <button class="prev" type="button" onclick={previousMonth}>
+                Prev
+            </button>
+            <span class="bold">{month}</span>
+            <button class="next" type="button" onclick={nextMonth}>
+                Next
+            </button>
+        </div>
+        <ul class="header">
+            <li>Sun</li>
+            <li>Mon</li>
+            <li>Tue</li>
+            <li>Wed</li>
+            <li>Thu</li>
+            <li>Fri</li>
+            <li>Sat</li>
+        </ul>
+        <ul class="datePickerHolder">
+            <template if:true={dates}>
+                <template for:each={dates} for:item="date">
+                    <li
+                        key={date.formatted}
+                        class={date.className}
+                        data-date={date.formatted}
+                        onclick={setSelected}
+                    >
+                        {date.text}
+                    </li>
+                </template>
+            </template>
+        </ul>
+    </div>
 </template>
